--- a/PassIn.Api/PassIn.Api.csproj
+++ b/PassIn.Api/PassIn.Api.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>b8596440-bd35-4f7b-b5f6-c6f61b0bc716</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
@@ -14,10 +15,6 @@
     <ProjectReference Include="..\PassIn.Application\PassIn.Application.csproj" />
     <ProjectReference Include="..\PassIn.Communication\PassIn.Communication.csproj" />
     <ProjectReference Include="..\PassIn.Exceptions\PassIn.Exceptions.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Controllers\" />
   </ItemGroup>
 
 </Project>
